--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -1,8 +1,8 @@
 {
     "title": "Türkçe",
     "best_score": "En iyi puan",
-    "start": "Başlangıç",
-    "score": "Gol",
+    "start": "Başla",
+    "score": "Skor",
     "settings": "Ayarlar",
     "sound": "Ses",
     "clef": "Anahtar",
