Light theme finished

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -28,6 +28,8 @@
 "t4": "Erkenne die Note und wähle die Antworten aus",
 "d4": "In den zeitgebundenen Spielen kannst du die Antworten auswählen, indem du auf die Antwort klickst, die du auswählen möchtest.",
 "t5": "Alles einstellen!",
-"d5": "Du kannst alle Einstellungen von den Einstellungen aus ändern. Du kannst jederzeit aus den Einstellungen aussteigen."
+"d5": "Du kannst alle Einstellungen von den Einstellungen aus ändern. Du kannst jederzeit aus den Einstellungen aussteigen.",
+"skip": "Überspringen",
+"next": "Nächster"
    
 }
