--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -28,5 +28,7 @@
 "t4": "Recognize the notes and select the answers",
 "d4": "Tap on the answer you want to select in timed games.",
 "t5": "Customize everything!",
-"d5": "You can adjust all settings from the settings. You can also log out anytime from the settings."
+"d5": "You can adjust all settings from the settings. You can also log out anytime from the settings.",
+"skip": "SKIP",
+"next": "NEXT"
 }
