--- a/assets/translations/tr-TR.json
+++ b/assets/translations/tr-TR.json
@@ -29,5 +29,7 @@
       "t4": "Notayı bil ve cevapları seç",
       "d4": "Süreli oyunlarda cevapları seçmek için seçmek istediğin cevabın üzerine bas.",
       "t5": "Her şeyi ayarla!",
-      "d5": "Tüm ayarları ayarlardan düzeltebilirsin. Ayarlardan istediğin zaman çıkış yapabilirsin."
+      "d5": "Tüm ayarları ayarlardan düzeltebilirsin. Ayarlardan istediğin zaman çıkış yapabilirsin.",
+      "skip": "Atla",
+      "next": "Sonraki"
 }
